add report for IncrementalTransformerVoltageControlOuterLoop
Signed-off-by: Caio Luke <caioluke97@gmail.com>